--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "pg": "^8.11.1",
