--- a/Client/package.json
+++ b/Client/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
+    "cloudinary": "^1.40.0",
+    "cloudinary-react": "^1.8.1",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2"
