--- a/Client/package.json
+++ b/Client/package.json
@@ -10,15 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-
     "cloudinary": "^1.40.0",
     "cloudinary-react": "^1.8.1",
     "dotenv": "^16.3.1",
-
-    "boxicons": "^2.1.4",
-
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
