--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "ngrok": "^5.0.0-beta.2",
     "nodemon": "^3.0.1",
-    "passport": "^0.5.3",
+    "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
