--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "mercadopago": "^1.5.17",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
