--- a/Client/package.json
+++ b/Client/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
